--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,9 @@
 }
 
 * {
-  padding: 0;
-  margin: 0;
+  /* padding: 0; */
+  /* margin: 0; */
   box-sizing: border-box;
-  font-size: 16px;
-  font-family: noto-sans-kr;
+  /* font-size: 16px; */
+  /* font-family: noto-sans-kr; */
 }
