--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
 @import "tailwindcss";
 
 @theme {
-  --color-bg1: hsl(0 0 030);
-  --color-bg0: hsl(0 0 15);
-  --color-bgDim: hsl(0 0 0);
+  --color-yellow-in-light: oklch(0.4057 0.108 89.07);
+  --color-yellow-in-light-accent: oklch(0.3057 0.108 89.07);
 
-  --color-fg1: hsl(0 0 90);
-  --color-fg0: hsl(0 0 75);
-  --color-fgDim: hsl(0 0 60);
+  --color-yellow-in-dark: oklch(0.8057 0.108 89.07);
+  --color-yellow-in-dark-accent: oklch(0.7057 0.108 89.07);
+
+
+  --color-blue-in-light: oklch(0.4057 0.108 235.45);
+  --color-blue-in-light-accent: oklch(0.3057 0.108 235.45);
+
+  --color-blue-in-dark: oklch(0.8057 0.108 235.45);
+  --color-blue-in-dark-accent: oklch(0.7057 0.108 235.45);
 }
 
 * {
@@ -20,8 +25,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: oklch(1 0 0 / 0.85);
+  background-color: oklch(0.15, 0, 0);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
