✨ Feat(header): Add multi select on off button

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 
 * {
     box-sizing: border-box;
+    /* transition-timing-function: "cubic-bezier(0,1.58,0,1.54)"; */
+    /* transition-timing-function: "cubic-bezier(.01,.81,.09,1.13)"; */
 }
 
 :root {
